--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,36 @@
-.App {
+.download-app:hover+.code-QR {
+  display: block;
+}
+
+.code-QR::before {
+  content : '';
+  position: absolute;
+  display : block;
+  width   : 100%;
+  height  : 20px;
+  top     : -10px;
+  left    : 0;
+}
+
+.swiper {
+  width : 100%;
+  height: 100%;
+}
+
+.swiper-slide {
   text-align: center;
-}
+  font-size : 18px;
+  background: #fff;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* Center slide text vertically */
+  display        : flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items    : center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.swiper-slide img {
+  display   : block;
+  width     : 100%;
+  height    : 100%;
+  object-fit: cover;
 }
