--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-weight: 400;
+}
+
 .download-app:hover+.code-QR {
   display: block;
 }
@@ -28,9 +32,68 @@
   align-items    : center;
 }
 
-.swiper-slide img {
+.swiper-slide {
   display   : block;
   width     : 100%;
   height    : 100%;
   object-fit: cover;
+}
+
+.long-text {
+  height            : 3.3rem;
+  overflow          : hidden;
+  display           : -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.long-text-description {
+  height            : 6rem;
+  overflow          : hidden;
+  display           : -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
+
+.percent-sale {
+  top                : 20px;
+  right              : 20px;
+  background-color   : #f84b2f;
+  border-radius      : 50%;
+  color              : white;
+  /* margin-top      : 20px; */
+  /* margin-right    : 20px; */
+  padding            : 26px;
+}
+
+.percent {
+  position : absolute;
+  left     : 50%;
+  top      : 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* .hover-item {
+  transition : transform linear 0.01s;
+  will-change: transform;
+} */
+
+.child-hove {
+  transition : transform linear 0.1s;
+  will-change: transform;
+  user-select: none;
+}
+
+.child-hover:hover {
+  transform : translateY(1px);
+  box-shadow: 0px 4px 8px 2px #f0f0f0;
+}
+
+.background_gradient {
+  position        : absolute;
+  top             : 0;
+  left            : 0;
+  right           : 0;
+  bottom          : 0;
+  background-image: linear-gradient(transparent, #fff)
 }
