calc total payment

--- a/src/App.css
+++ b/src/App.css
@@ -97,3 +97,25 @@ body {
   bottom          : 0;
   background-image: linear-gradient(transparent, #fff)
 }
+
+/* table {
+  font-family     : arial, sans-serif;
+  border-collapse : collapse;
+  width           : 100%;
+  background-color: white;
+}
+
+td,
+th {
+  border    : 1px solid #dddddd;
+  text-align: left;
+  padding   : 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+.active {
+  color: #f6f6f6;
+} */
